# MLXTwoTowers

./: .gitignore  ABModel.py  ABModel_SinglePass.py  ABMsMarco.py  ABMsMarcoDatasetTokenizerIDX.py  ABTokenizertest.py  Dockerfile  README.md  dataset.py  docker-compose.yml  dockerfile  evaluate.py  marcos.ipynb  model.py  preprocess_data.py  pyproject.toml  requirements.txt  sample3.py  setup_computa1.sh  setup_computa2.sh  store_documents.py  tokenizer.py  train_models.py  utils.py  word2vec.py
app/: main.py
