[project]
name = "mlxtwotowers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
    "wandb>=0.20.1",
]
